Fix 'email me' text size on mobile

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -39,7 +39,8 @@ main li{
 
 main .signup-form {
   width: 80%;
-  font-size: 80px;
+  font-size: 40px;
+  padding-bottom: 100px;
 }
 
 main .signup-form input{
